# rn-wheel-picker-reanimated

./: CONTRIBUTING.md  LICENSE  README.md  package.json  rn-wheel-picker-reanimated.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/rnwheelpickerreanimated/: RnWheelPickerReanimatedModule.kt  RnWheelPickerReanimatedPackage.kt
android/src/newarch/: RnWheelPickerReanimatedSpec.kt
android/src/oldarch/: RnWheelPickerReanimatedSpec.kt
cpp/: rn-wheel-picker-reanimated.cpp  rn-wheel-picker-reanimated.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/RnWheelPickerReanimatedExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/RnWheelPickerReanimatedExample.xcodeproj/: project.pbxproj
example/ios/RnWheelPickerReanimatedExample.xcodeproj/xcshareddata/xcschemes/: RnWheelPickerReanimatedExample.xcscheme
example/ios/RnWheelPickerReanimatedExample.xcworkspace/: contents.xcworkspacedata
example/ios/RnWheelPickerReanimatedExampleTests/: RnWheelPickerReanimatedExampleTests.m
example/src/: App.tsx
ios/: RnWheelPickerReanimated.h  RnWheelPickerReanimated.mm
src/: Item.tsx  NativeRnWheelPickerReanimated.ts  WheelPicker.tsx  WheelPickerItem.tsx  helpers.ts  index.tsx  types.ts
(+2 files in other folders)
